--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <div class="header">
         <div class="options">
-            <button class="show-modal model1">Topic 1</button>
-            <button class="show-modal model2">Topic 2</button>
-            <button class="show-modal model3">Topic 3</button>
+            <button class="show-modal model1">1</button>
+            <button class="show-modal model2">2</button>
+            <button class="show-modal model3">3</button>
         </div>
     </div>
 
